--- a/style.css
+++ b/style.css
@@ -94,3 +94,20 @@ ul li.checked {
 ul li.checked::before {
   background-image: url('images/checked.png');
 }
+
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  line-height: 40px;
+  color: #555;
+  text-align: center;
+}
+
+ul li span:hover {
+  background-color: #efeef0;
+  border-radius: 50%;
+}
