--- a/style.css
+++ b/style.css
@@ -53,6 +53,17 @@ input {
   font-size: 16px;
 }
 
+@media only screen and (max-width: 600px) {
+  input {
+    padding: 0px;
+    font-size: 13px;
+  }
+}
+
+
+
+
+
 button {
   border: none;
   outline: 0;
